# nnfxbacktestbot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  ui_prompt.txt
.claude/: settings.json
docs/: NEXT_SESSION_NOTES.md  indicator_translation_workflow.md  nnfx_hummingbot_dry_run.md
freqtrade/: docker-compose.yml
octobot/: docker-compose.yml
research/: rejected_crypto_4h_zlmacd_86_85_2_exit36_slen3.md
scripts/: diagnose_strategy_signals.py  download_binance_4h_data.py  download_binance_btc_multi.ps1  generate_indicator_skeleton.py  generate_new_indicator_diagnostic_configs.py  inspect_mq4_indicator.py  run_btc_grid_multi.ps1  run_cross_timeframe_4h_validation.py  run_crypto_4h_exit36_slen3_validation.py  run_eth_4h_exit_diagnostic.py  run_eth_4h_risk_diagnostic.py  run_eth_4h_zlmacd_diagnostic.py  run_freqtrade_docker_setup.ps1  run_grid_backtest.ps1  run_hummingbot_docker_setup.ps1  run_new_indicator_diagnostics.py  run_parameter_sweep.py  run_structural_diagnostics.py  setup_local.ps1  summarize_backtest_results.py  update_btcusdt_1d_binance.py  validate_indicator_against_mt4_export.py
tests/: test_cross_roads_indicator.py  test_disabled_filter.py  test_grid_backtester_output.py  test_grid_builder.py  test_grid_regime.py  test_indicator_translation_tools.py  test_metrics_classification.py  test_new_indicators.py  test_nnfx_acceptance_configs.py  test_nnfx_backtester_basic.py  test_nnfx_batch_runner.py  test_nnfx_chart_writer.py  test_nnfx_config_schema.py  test_nnfx_data_loader.py  test_nnfx_hummingbot_adapter.py  test_nnfx_mql4_scaffold.py  (+9 more)
(+282 files in other folders)
