[project]
name = "trading-system"
version = "0.1.0"
description = "Self-hosted trading research and grid backtesting scaffold"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "matplotlib>=3.8",
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
grid-backtest = "trading_system.cli.grid_backtest:app"
nnfx-backtest = "nnfx_crypto.backtest.run:main"
nnfx-backtest-batch = "nnfx_crypto.backtest.run_batch:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
